src/libbulletc/src/btSoftBody_wrap.h


	//EXPORT void btSoftBody_Node_setN(btSoftBody_Node* obj, void value);
	//EXPORT void btSoftBody_Node_setQ(btSoftBody_Node* obj, void value);
	//EXPORT void btSoftBody_Node_setV(btSoftBody_Node* obj, void value);
	//EXPORT void btSoftBody_Node_setX(btSoftBody_Node* obj, void value);

	EXPORT btSoftBody_Link* btSoftBody_Link_new();

	EXPORT int btSoftBody_Link_getBbending(btSoftBody_Link* obj);

	EXPORT btScalar btSoftBody_Link_getC0(btSoftBody_Link* obj);

	EXPORT btScalar btSoftBody_Link_getC1(btSoftBody_Link* obj);

	EXPORT btScalar btSoftBody_Link_getC2(btSoftBody_Link* obj);

	EXPORT void btSoftBody_Link_getC3(btSoftBody_Link* obj);

	//EXPORT * btSoftBody_Link_getN(btSoftBody_Link* obj);
	EXPORT btScalar btSoftBody_Link_getRl(btSoftBody_Link* obj);

	EXPORT void btSoftBody_Link_setBbending(btSoftBody_Link* obj, int value);

	EXPORT void btSoftBody_Link_setC0(btSoftBody_Link* obj, btScalar value);

	EXPORT void btSoftBody_Link_setC1(btSoftBody_Link* obj, btScalar value);

	EXPORT void btSoftBody_Link_setC2(btSoftBody_Link* obj, btScalar value);

	//EXPORT void btSoftBody_Link_setC3(btSoftBody_Link* obj, void value);
	//EXPORT void btSoftBody_Link_setN(btSoftBody_Link* obj, * value);
	EXPORT void btSoftBody_Link_setRl(btSoftBody_Link* obj, btScalar value);


	EXPORT btSoftBody_Face* btSoftBody_Face_new();

	EXPORT btDbvtNode* btSoftBody_Face_getLeaf(btSoftBody_Face* obj);

	//EXPORT * btSoftBody_Face_getN(btSoftBody_Face* obj);
	EXPORT void btSoftBody_Face_getNormal(btSoftBody_Face* obj);

	EXPORT btScalar btSoftBody_Face_getRa(btSoftBody_Face* obj);

	EXPORT void btSoftBody_Face_setLeaf(btSoftBody_Face* obj, btDbvtNode* value);

	//EXPORT void btSoftBody_Face_setN(btSoftBody_Face* obj, * value);
	//EXPORT void btSoftBody_Face_setNormal(btSoftBody_Face* obj, void value);
	EXPORT void btSoftBody_Face_setRa(btSoftBody_Face* obj, btScalar value);


	EXPORT btSoftBody_Tetra* btSoftBody_Tetra_new();

	EXPORT btScalar* btSoftBody_Tetra_getC0(btSoftBody_Tetra* obj);

	EXPORT btScalar btSoftBody_Tetra_getC1(btSoftBody_Tetra* obj);

	EXPORT btScalar btSoftBody_Tetra_getC2(btSoftBody_Tetra* obj);

	EXPORT btDbvtNode* btSoftBody_Tetra_getLeaf(btSoftBody_Tetra* obj);

	//EXPORT * btSoftBody_Tetra_getN(btSoftBody_Tetra* obj);
	EXPORT btScalar btSoftBody_Tetra_getRv(btSoftBody_Tetra* obj);

	EXPORT void btSoftBody_Tetra_setC0(btSoftBody_Tetra* obj, btScalar* value);

	EXPORT void btSoftBody_Tetra_setC1(btSoftBody_Tetra* obj, btScalar value);

	EXPORT void btSoftBody_Tetra_setC2(btSoftBody_Tetra* obj, btScalar value);

	EXPORT void btSoftBody_Tetra_setLeaf(btSoftBody_Tetra* obj, btDbvtNode* value);

	//EXPORT void btSoftBody_Tetra_setN(btSoftBody_Tetra* obj, * value);
	EXPORT void btSoftBody_Tetra_setRv(btSoftBody_Tetra* obj, btScalar value);


	EXPORT btSoftBody_RContact* btSoftBody_RContact_new();

	EXPORT void btSoftBody_RContact_getC0(btSoftBody_RContact* obj);

	EXPORT void btSoftBody_RContact_getC1(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC2(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC3(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC4(btSoftBody_RContact* obj);

	EXPORT void btSoftBody_RContact_getCti(btSoftBody_RContact* obj);

	EXPORT btSoftBody_Node* btSoftBody_RContact_getNode(btSoftBody_RContact* obj);

	//EXPORT void btSoftBody_RContact_setC0(btSoftBody_RContact* obj, void value);
	//EXPORT void btSoftBody_RContact_setC1(btSoftBody_RContact* obj, void value);
	EXPORT void btSoftBody_RContact_setC2(btSoftBody_RContact* obj, btScalar value);

	EXPORT void btSoftBody_RContact_setC3(btSoftBody_RContact* obj, btScalar value);

	EXPORT void btSoftBody_RContact_setC4(btSoftBody_RContact* obj, btScalar value);

	//EXPORT void btSoftBody_RContact_setCti(btSoftBody_RContact* obj, void value);
	EXPORT void btSoftBody_RContact_setNode(btSoftBody_RContact* obj, btSoftBody_Node* value);

	EXPORT void btSoftBody_RContact_delete(btSoftBody_RContact* obj);