src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		public Link()
			: base(btSoftBody_Link_new())
		{
		}

		public int Bbending
		{
			get { return btSoftBody_Link_getBbending(_native); }
			set { btSoftBody_Link_setBbending(_native, value); }
		}

		public float C0
		{
			get { return btSoftBody_Link_getC0(_native); }
			set { btSoftBody_Link_setC0(_native, value); }
		}

		public float C1
		{
			get { return btSoftBody_Link_getC1(_native); }
			set { btSoftBody_Link_setC1(_native, value); }
		}

		public float C2
		{
			get { return btSoftBody_Link_getC2(_native); }
			set { btSoftBody_Link_setC2(_native, value); }
		}
        /*
		public void C3
		{
			get { return btSoftBody_Link_getC3(_native); }
			set { btSoftBody_Link_setC3(_native, value._native); }
		}
        */
		public Node N
		{
			get { return new Node(btSoftBody_Link_getN(_native)); }
			set { btSoftBody_Link_setN(_native, value._native); }
		}

		public float Rl
		{
			get { return btSoftBody_Link_getRl(_native); }
			set { btSoftBody_Link_setRl(_native, value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Link_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_Link_getBbending(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Link_getC0(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Link_getC1(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Link_getC2(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_getC3(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Link_getN(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Link_getRl(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setBbending(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setC0(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setC1(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setC2(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setC3(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setN(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Link_setRl(IntPtr obj, float value);
	}

	public class Face : Feature
	{
		internal Face(IntPtr native)
			: base(native)
		{
		}

		public Face()
			: base(btSoftBody_Face_new())
		{
		}
        /*
		public DbvtNode Leaf
		{
			get { return btSoftBody_Face_getLeaf(_native); }
			set { btSoftBody_Face_setLeaf(_native, value._native); }
		}
        */
		public Node N
		{
            get { return new Node(btSoftBody_Face_getN(_native)); }
			set { btSoftBody_Face_setN(_native, value._native); }
		}
        /*
		public void Normal
		{
			get { return btSoftBody_Face_getNormal(_native); }
			set { btSoftBody_Face_setNormal(_native, value._native); }
		}
        */
		public float Ra
		{
			get { return btSoftBody_Face_getRa(_native); }
			set { btSoftBody_Face_setRa(_native, value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Face_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Face_getLeaf(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Face_getN(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Face_getNormal(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Face_getRa(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Face_setLeaf(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Face_setN(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Face_setNormal(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Face_setRa(IntPtr obj, float value);
	}

	public class Tetra : Feature
	{
		internal Tetra(IntPtr native)
			: base(native)
		{
		}

		public Tetra()
			: base(btSoftBody_Tetra_new())
		{
		}

		public Vector3 C0
		{
			get
			{
				Vector3 value;
				btSoftBody_Tetra_getC0(_native, out value);
				return value;
			}
			set { btSoftBody_Tetra_setC0(_native, ref value); }
		}

		public float C1
		{
			get { return btSoftBody_Tetra_getC1(_native); }
			set { btSoftBody_Tetra_setC1(_native, value); }
		}

		public float C2
		{
			get { return btSoftBody_Tetra_getC2(_native); }
			set { btSoftBody_Tetra_setC2(_native, value); }
		}
        /*
		public DbvtNode Leaf
		{
			get { return btSoftBody_Tetra_getLeaf(_native); }
			set { btSoftBody_Tetra_setLeaf(_native, value._native); }
		}
        */
		public Node N
		{
			get { return new Node(btSoftBody_Tetra_getN(_native)); }
			set { btSoftBody_Tetra_setN(_native, value._native); }
		}

		public float Rv
		{
			get { return btSoftBody_Tetra_getRv(_native); }
			set { btSoftBody_Tetra_setRv(_native, value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Tetra_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_getC0(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Tetra_getC1(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Tetra_getC2(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Tetra_getLeaf(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Tetra_getN(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Tetra_getRv(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setC0(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setC1(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setC2(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setLeaf(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setN(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Tetra_setRv(IntPtr obj, float value);
	}

	public class RContact
	{
		internal IntPtr _native;

		internal RContact(IntPtr native)
		{
			_native = native;
		}

		public RContact()
		{
			_native = btSoftBody_RContact_new();
		}
        /*
		public void C0
		{
			get { return btSoftBody_RContact_getC0(_native); }
			set { btSoftBody_RContact_setC0(_native, value._native); }
		}
            
		public void C1
		{
			get { return btSoftBody_RContact_getC1(_native); }
			set { btSoftBody_RContact_setC1(_native, value._native); }
		}
        */
		public float C2
		{
			get { return btSoftBody_RContact_getC2(_native); }
			set { btSoftBody_RContact_setC2(_native, value); }
		}

		public float C3
		{
			get { return btSoftBody_RContact_getC3(_native); }
			set { btSoftBody_RContact_setC3(_native, value); }
		}

		public float C4
		{
			get { return btSoftBody_RContact_getC4(_native); }
			set { btSoftBody_RContact_setC4(_native, value); }
		}
        /*
		public void Cti
		{
			get { return btSoftBody_RContact_getCti(_native); }
			set { btSoftBody_RContact_setCti(_native, value._native); }
		}
        */
		public Node Node
		{
			get { return new Node(btSoftBody_RContact_getNode(_native)); }
			set { btSoftBody_RContact_setNode(_native, value._native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_RContact_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~RContact()
		{
			Dispose(false);
		}
